--- a/index.html
+++ b/index.html
@@ -986,8 +986,8 @@ hr{
 </head>
 <body>
   <div class="buttons">
-    <a class="chinese" href="index.html">中文</a>
-    <a class="japan" href="japaneseversion.html">日本語</a>
+    <!-- <a class="chinese" href="index.html">中文</a> -->
+    <!-- <a class="japan" href="japaneseversion.html">日本語</a> -->
   </div>
   <!-- <div class="allstars">
     <div class="star1"></div>
@@ -1064,12 +1064,8 @@ hr{
           <h4>About</h4>
           <h2>自我介紹</h2>
             <label>
-              一年前在朋友的引導下接觸到程式這個領域。<br>
-              一開始是接觸swift，但後來在短短兩週的台大資訊班前端課程開始累積我對網頁前端的好奇心。
-              接著我開始在網路上找資源，參加各種關於程式的聚會，
-              如Hahow,Udemy,Codecademy等等的課程及swift girls,appworks school,六角學院等等所舉辦的分享會，
-              接觸到越多，就越增添了我對這領域的興趣。
-              今年四月開始的實習更讓我確定要往全端工程師之路邁進。<br>
+              我是一個重視與設計師溝通並傳達良好的使用者體驗的前端工程師。雖然網站開發經驗只有短短一年半的時間,但是自從接觸軟體開發以來,就很幸運地持續挑戰難度高的專案。我平常也很努力的持續追求成長,與工程師朋友們籌辦技術學習的讀書會。目前在資訊安全服務公司擔任公司內唯一的專職前端工程師,除了與後端工程師和設計師密切溝通協作以外,也會自發性的思考網站使用者流程與體驗,持續交付更好的軟體服務。<br>
+              在職涯的下一個階段,希望能夠加入面向消費者的新創公司,打造更多人使用的 toC 網路服務。也期許自己在前端技術更成熟時,開始接觸更多後端開發,往全端工程師的職涯道路上邁進。
 
             </label>
         </div>
@@ -1120,25 +1116,25 @@ hr{
             <li>
               JavaScript
               <div class="bar">
-                <div class="value p40"></div>
+                <div class="value p80"></div>
               </div>
             </li>
             <li>
               Pug&Sass
               <div class="bar">
-                <div class="value p70"></div>
+                <div class="value p85"></div>
               </div>
             </li>
             <li>
               jQuery
               <div class="bar">
-                <div class="value p40"></div>
+                <div class="value p70"></div>
               </div>
             </li>
             <li>
               Vue.js
               <div class="bar">
-                <div class="value p20"></div>
+                <div class="value p85"></div>
               </div>
             </li>
             <li>
@@ -1152,7 +1148,7 @@ hr{
             1.了解HTML語意及了解CSS的動畫語意並且能將其活用在網頁排版及呈現動畫效果。<br>
             2.對原生Javascript有基礎概念，目前常用jQuery練習做網頁動畫效果。<br>
             3.能不倚賴framework進行客製化網頁設計，但也熟悉bootstrap亦可利用此framework做網頁開發。<br>
-            4.了解vue.js基礎概念，並能串接第三方api資料。<br>
+            4.了解vue.js概念，並能串接第三方api資料。<br>
             5.能使用FTP,Git進行版本控制。
           </li>
           </ul>
@@ -1162,17 +1158,16 @@ hr{
         <ul class="futureplan" style="opacity: 0.9">
           <li>半年
             <ul>
-              <li>1.從網頁設計到網頁前端</li>
-              <li>2.熟悉Git版本控制</li>
-              <li>3.熟悉一種前端框架</li>
-              <li>4.從無到有架出完整的網站</li>
+              <li>1.能設計出流暢使用者體驗的前端介面</li>
+              <li>2.學習vue以外的另一種前端框架</li>
+              <li>3.學習一種後端語言（node.js）</li>
+              <li>4.成為website designer & frontend engineer</li>
             </ul>
           </li>
           <li>一年
             <ul>
               <li>1.學會開發Web API</li>
-              <li>2.學習Ruby on Rails</li>
-              <li>3.學會雲端架站</li>
+              <li>2.學習php或一個後端框架（Laravel）</li>
             </ul>
           </li>
         </ul>
@@ -1191,23 +1186,26 @@ hr{
         <h4>Portfolios</h4>
         <h2>作品集</h2>
         <ul class="listPortfolio">
-          <li class="scratch">Scratch
+          <!-- <li class="scratch">Scratch
             <ul>
               <li><a class="potfoliohref"href="https://scratch.mit.edu/projects/200584455/" target="_blank">RPG對打小遊戲</a></li>
             </ul>
-          </li>
+          </li> -->
           <li class="website">Website  
             <ul>
+              <li><a class="potfoliohref" href="https://autopass.xyz/" target="_blank">車麻吉官網</a></li>
+              <li style="font-size:12px"> -實習生時代,從零打造的車麻吉官網。開發過程中,與設計師密切合作,堅持達成每一個設計細節,雖然花費近兩個月,但是是完成度非常高且兼顧使用者體驗的官網作品。也透過這個專案初次接觸 Vue.js, 是一個讓我成為真正的前端工程師的專案。</li>
               <li><a class="potfoliohref" href="http://pmst.panasonic.com.tw/Air/PSPCindex.aspx" target="_blank">Panasonic商品網站</a></li>
-              <li><a class="potfoliohref" href="http://catweb.hellokarla.nctu.me/?" target="_blank">購物網站(以貓咪為商品)</a></li>
+              <li style="font-size:12px"> -在天王星多媒體擔任前端實習生時做的 Panasonic 官網作品。當時初接觸網站開發,本專案主要利用 Bootstrap, jQuery 建置。</li>
+              <!-- <li><a class="potfoliohref" href="http://catweb.hellokarla.nctu.me/?" target="_blank">購物網站(以貓咪為商品)</a></li>
               <li><a class="potfoliohref" href="http://foodblog.hellokarla.nctu.me/?" target="_blank">美食部落格(Bootstrap)</a></li>
               <li><a class="potfoliohref" href="http://resume.hellokarla.nctu.me/" target="_blank">聯合履歷</a></li>
               <li><a class="potfoliohref" href="http://maipple.hellokarla.nctu.me/?" target="_blank">服飾網站(仿照Maipple)</a></li>
               <li><a class="potfoliohref" href="http://catsitter.hellokarla.nctu.me/?" target="_blank">貓咪褓母網頁</a></li>
-              <li><a class="potfoliohref" href="http://map.hellokarla.nctu.me/?" target="_blank">GoogleMap地圖api練習</a></li> 
+              <li><a class="potfoliohref" href="http://map.hellokarla.nctu.me/?" target="_blank">GoogleMap地圖api練習</a></li>  -->
             </ul>
           </li>
-          <li class="codepen">CodePen
+          <!-- <li class="codepen">CodePen
             <ul>
               <li><a class="potfoliohref"href="https://codepen.io/KarenCodeDesign/pen/QOeaXy" target="_blank">Square Monster</a></li>
               <li><a class="potfoliohref"href="https://codepen.io/KarenCodeDesign/pen/dZvENo" target="_blank">Where is my cake?</a></li>
@@ -1220,30 +1218,48 @@ hr{
               <li><a class="potfoliohref"href="https://codepen.io/KarenCodeDesign/pen/RxgpaN" target="_blank">意見回覆表單</a></li>
               <li><a class="potfoliohref"href="https://codepen.io/KarenCodeDesign/pen/YYGjRV" target="_blank">貓咪褓母網頁(仿照Rover)</a></li>
             </ul>
-          </li>
-          <br>
+          </li> -->
+          <!-- <br> -->
         <div class="block">
           <h4>Experience / Works</h4>
           <h2>工作經歷</h2>
           <ul class="listExperience" style="opacity: 0.9">
-            <li class="year">2018
+            <li class="year">2018/08
+                <ul>
+                  <li style="color:#7b504a;">Hiero7 禾新數位</li>
+                  <li style="color:#7b504a;">前端工程師</li>
+                  <li>
+                    * 從外包公司接管官網專案,並透過 Vue.js 重構。<br>
+                    * 擔任公司唯一的前端工程師,使用 Vue.js & Vuex 等技術開發支援資安服務的內部系統的前端部分。<br>
+                    * 構思網站流程,開發使用者體驗更順暢的內部系統。<br>
+                    * 與後端工程師協作,串接 RESTful API。<br>
+                    * 參與敏捷式開發流程,大幅度提高開發效率。<br>
+                    * 能夠獨立開發也能多人協作，訂定公司內部前端協作規範。
+                  </li>
+                </ul>
+              </li>
+            <li class="year">2018/06
               <ul>
-                <li>車麻吉(前停車大聲公)</li>
-                <li>前端實習</li>
-                <li>開發官網且製作RWD版本網站</li>
+                <li style="color:#7b504a;">車麻吉(前停車大聲公)</li>
+                <li style="color:#7b504a;">前端實習生</li>
+                <li>
+                  * 透過 Zeplin 等設計溝通工具,與設計師協作,獨自從零開發車麻吉公司官網(https://autopass.xyz/)。<br>
+                  * 透過善用網路上的學習資源,挑戰使用全新的技術框架 (Vue.js + Webpack) 開發網站。<br>
+                  * 定義專案上遇到的技術問題,並主動與技術長討論解決方案。
+                </li>
               </ul>
             </li>
-            <li class="year">2018
+            <li class="year">2018/04
               <ul>
-                <li>天王星多媒體(Panasonic網路廣告公司)</li>
-                <li>前端學生實習</li>
-                <li>按照設計部門給的設計圖切版製作RWD版本網站</li>
-                <li>維護及優化網站及程式碼</li>
-                <li>FTP、Git版控</li>
-                <li>SEO搜尋引擎優化</li>
+                <li style="color:#7b504a;">天王星多媒體(Panasonic網路廣告公司)</li>
+                <li style="color:#7b504a;">前端實習生</li>
+                <li>
+                  * 與資深工程師協作,合作交付符合客戶需求的 RWD 官網建置專案。<br>
+                  * 將開發過程中發現的 UX 問題,回饋給專案設計師,以達到打造更好專案的結果。
+                </li>
               </ul>
             </li>
-            <li class="year">2016
+            <!-- <li class="year">2016
               <ul>
                 <li>佳欣牙醫</li>
                 <li>牙醫助理</li>
@@ -1270,7 +1286,7 @@ hr{
                 <li>情人節檔次</li>
                 <li>負責銷售情人節禮盒及店內商品</li>
               </ul>
-            </li>
+            </li> -->
           </ul>
         </div>  
         <div class="block">
